GNOME Bugzilla – Bug 698895
critical assertions changing default application for file type
Last modified: 2014-02-17 21:52:54 UTC
I'm running Nautilus 3.8 (from git master) with GTK 3.9 (from git master). To see the problem: 1. Run Nautilus from a terminal window. 2. Right click on a text file and choose Properties. 3. Open the Open With tab. 4. Select any application under Other Applications, then press "Set as default". After a moment, you'll see this in the console: (nautilus:22602): Gtk-CRITICAL **: gtk_widget_show: assertion `GTK_IS_WIDGET (widget)' failed (nautilus:22602): Gtk-CRITICAL **: gtk_spinner_start: assertion `GTK_IS_SPINNER (spinner)' failed These are possibly benign, but we should find and fix them. A stack trace for the first assertion is below.
+ Trace 231855
Still present in 3.11.3
Created attachment 267802 [details] [review] Append the fields in the properties grid
Thanks for the patch - I pushed a different version of this to git master.