properties-window: don't start deep counts for non-directories

Fixes a critical warning when updating the window.

https://bugzilla.gnome.org/show_bug.cgi?id=698895